# inference-lab

./: .gitignore  pyproject.toml  requirements.txt
analysis/: plot.py
benchmark/: client.py  metrics.py  workload.py
blog/: README.md
blog/0-basics/: 00-inference-basics.md
blogs/: 00-setup-vllm.md  01-baseline-benchmark.md  README.md
experiments/: runner.py
newblogs/0-basics/: 00-draft.md  00-inference-basics.md
results/: llama_c1.json  llama_c32.json  llama_c64.json  llama_c8.json  mistral_c8.json
results/results-chunked/: llama_c01_chunked.json  llama_c02_chunked.json  llama_c04_chunked.json  llama_c08_chunked.json  llama_c16_chunked.json  llama_c32_chunked.json  llama_c64_chunked.json
results/results-unchunked/: llama_c01_nochunk.json  llama_c02_nochunk.json  llama_c04_nochunk.json  llama_c08_nochunk.json  llama_c16_nochunk.json  llama_c32_nochunk.json  llama_c64_nochunk.json
results/results_clean/: llama_c1.json  llama_c64.json  llama_c8.json
results_old/: llama_c1.json  mistral_c1.json  mistral_c32.json  mistral_c64.json
scripts/: setup_pod.sh  test_request.py
serving/: launch.py
serving/configs/: baseline.yaml
setup/: install.sh
